# advent_2025

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
input_examples/: day09_custom  day11
src/: common.rs  lib.rs  main.rs  models.rs
src/day01/: logic.rs  mod.rs  parser.rs  tests.rs
src/day02/: logic.rs  mod.rs  parser.rs  tests.rs
src/day03/: logic.rs  mod.rs  parser.rs  tests.rs
src/day04/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day05/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day06/: logic.rs  mod.rs  parser.rs  tests.rs
src/day07/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day08/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day09/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day10/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day11/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/day12/: logic.rs  mod.rs  models.rs  parser.rs  tests.rs
src/dayxx/: logic.rs  mod.rs  tests.rs
