[profile.release]
debug = true


[package]
name = "advent_2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.2.0"
comfy-table = "7.1.0"
hashbrown = "0.15.2"
itertools = "0.13.0"
nom = "7.1.3"
once_cell = "1.20.2"
petgraph = "0.6.5"
regex = "1.11.1"
