[profile.release]
debug = true


[package]
name = "advent_2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
fraction = "0.15.3"
itertools = "0.14.0"
ndarray = "0.17.1"
nom = "8.0.0"
